# prescup-challenges

./: LICENSE.md  README.md
.github/workflows/: codeql.yml
.gitlab/merge_request_templates/: default.md
individual/round1-ai-0250-little-compromise/: README.md
individual/round1-ai-1000-zap-the-cipher-zip/: README.md
individual/round1-co-0250-marvelous-challenge-in-uncovering-secrets/: README.md
individual/round1-co-0500-shave-and-aristagoras-two-bits/: README.md
individual/round1-om-0250-breaking-all-the-rulez/: README.md
individual/round1-om-1000-spider-web/: README.md
individual/round1-pd-0250-silk-road-4.0/: README.md
individual/round1-sp-0250-are-my-control-systems-isolated/: README.md
individual/round1-sp-0500-python-security-pick-em/: README.md
individual/round1-sp-1000-bumbling-binary-bits/: README.md
individual/round2-ai-1000-tracking-your-every-move/: README.md
individual/round2-ai-2000-no-language-is-perfect/: README.md
individual/round2-co-1000-curious-case-of-matryoshka/: README.md
individual/round2-co-2000-not-suspicious-at-all/: README.md
individual/round2-om-1000-cutting-through-perimeter-defenses/: README.md
individual/round2-om-2000-bad-beacons/: README.md
individual/round2-pd-2000-meerkat-lookout/: README.md
individual/round2-sp-1000-integer-overflow/: README.md
individual/round2-sp-2000-silly-hashing/: README.md
individual/round2-tfc-3000-tile-town/: README.md
individual/round3-01-13/: README.md
individual/round3-02-field-of-streams-needles-in-a-haystack/: README.md
individual/round3-03-zork-for-cyber-adventurers/: README.md
individual/round3-04-thx-4-axing/: README.md
individual/round3-06-slackin'/: README.md
individual/round3-09-winston-wolf/: README.md
pc1/: README.md
pc2/: README.md
pc2/individual-b/round2-no-language-is-perfect-vol-2/solution/source/: Cargo.toml  flag.txt
pc2/individual-b/round2-no-language-is-perfect-vol-2/solution/source/src/: main.rs
pc2/team/round2-the-enemy-within/solution/source/inner/: Cargo.toml
pc2/team/round2-the-enemy-within/solution/source/inner/src/: main.rs
pc2/team/round2-the-enemy-within/solution/source/outer/: Cargo.toml
pc2/team/round2-the-enemy-within/solution/source/outer/src/: main.rs
pc3/: README.md
pc3/individual-b/round2-fundamentals/solution/server_source/: Cargo.toml
pc3/individual-b/round2-fundamentals/solution/server_source/src/: helpers.rs  http_api.rs  main.rs
pc3/individual-b/round3-introspection/solution/source/: Cargo.toml  README.md
pc3/individual-b/round3-introspection/solution/source/src/: lib.rs
pc3/team/round1-a-kings-ransom/solution/source/kings_ransom_rslib/: Cargo.toml
pc3/team/round1-a-kings-ransom/solution/source/kings_ransom_rslib/src/: lib.rs
pc3/team/round2-imitation/solution/source/: Cargo.toml  LICENSE  README.md  convert.py  vkeys.txt
pc3/team/round2-imitation/solution/source/.cargo/: config.toml
pc3/team/round2-imitation/solution/source/src/: main.rs
pc3/team/round3b-reporting-in/challenge/reporting-in/source/: Cargo.toml
pc3/team/round3b-reporting-in/challenge/reporting-in/source/src/: main.rs
pc4/: README.md
pc5/: README.md
pc5/individual-b/round1-nice-encryption-you-have-there/challenge/source/: Cargo.toml  alice_in_wonderland.txt
pc5/individual-b/round1-nice-encryption-you-have-there/challenge/source/src/: client.rs  common.rs  server.rs
pc5/team/round1-through-the-airlock/challenge/api/: .env  Cargo.toml
pc5/team/round1-through-the-airlock/challenge/api/migrations/: 20230412153812_initialize.sql  20230412173932_starter_data.sql
pc5/team/round1-through-the-airlock/challenge/api/queries/: get_airlock.sql  get_camera.sql  update_airlock.sql  update_camera.sql
pc5/team/round1-through-the-airlock/challenge/api/scripts/: create_pgsql_container.sh  destroy_pgsql_container.sh  down.sh  up.sh
pc5/team/round1-through-the-airlock/challenge/api/src/: airlock.rs  camera.rs  communication.rs  door.rs  environment.rs  error.rs  hydroponics.rs  main.rs  power.rs
pc5/team/round2-i-do-what-i-want/challenge/source/: Cargo.toml
pc5/team/round2-i-do-what-i-want/challenge/source/src/: client.rs  common.rs  server.rs  token1  token2  token3
pc6/: LICENSE.md  README.md
pc6-round1/: README.md
pc6-round1/individual-b/whats-this-button-do/challenge/source/: Cargo.toml
pc6-round1/individual-b/whats-this-button-do/challenge/source/src/: client.rs  server.rs
pc6-round1/individual-b/whats-this-button-do/challenge/source/src/common/: errors.rs  mod.rs
pc6-round1/team/fun-with-distributed-systems/challenge/source/: Cargo.toml  build.sh  known_peers
pc6-round1/team/fun-with-distributed-systems/challenge/source/src/: generate_static_keypairs.rs  helpers.rs  part1.rs
pc7/: README.md
pc7/individual-offense/round2-waiting_for_harry/challenge/game_rust/rust/: .dockerignore  Cargo.toml  Dockerfile  justfile
pc7/individual-offense/round2-waiting_for_harry/challenge/game_rust/rust/.cargo/: config.toml
pc7/individual-offense/round2-waiting_for_harry/challenge/game_rust/rust/src/: lib.rs  main_scene.rs  mob.rs  player.rs
pc7/individual-offense/round2-waiting_for_harry/challenge/game_rust/rust/src/hud/: end.rs  mod.rs  play.rs  preparing.rs  settings.rs  start.rs
pc7/individual-offense/round2-waiting_for_harry/challenge/server/: .env  Cargo.toml  Rocket.toml  leaderboard.db
pc7/individual-offense/round2-waiting_for_harry/challenge/server/.sqlx/: query-30ae7451d0a49cfbf774ac3bac26f446a8a9dbe40937fa3f4efc3da31c79d388.json  query-525aefe0b23b395e73e8fb956967ebf2ff4268c2045b1c08ff83749dbd6b958c.json
pc7/individual-offense/round2-waiting_for_harry/challenge/server/game/: index.html
pc7/individual-offense/round2-waiting_for_harry/challenge/server/migrations/: 20250803224719_create_leaderboard.sql  20250803225444_populate_leaderboard.sql
pc7/individual-offense/round2-waiting_for_harry/challenge/server/src/: main.rs
pc7/individual-offense/round2-waiting_for_harry/challenge/server/templates/: leaderboard.html.hbs
skilling-continuation-labs/: README.md
skills-continuation-labs/: LICENSE.md
(+5272 files in other folders)
