[package]
name = "no-language-is-perfect-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rocket_contrib = "0.4.5"
rand = "0.7.3"
serde = "1.0.114"
serde_json = "1.0.56"
serde_derive = "1.0.114"
