[package]
name = "prescup3-b08-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
rand = "0.8.4"
lazy_static = "1.4.0"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]
