[package]
name = "prescup3-b11-pyextmod"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mainmodule"
crate-type = ["cdylib"]

[dependencies]
dirs = "4.0.0"
obfstr = "0.3.0"

[dependencies.pyo3]
version = "0.14.5"
features = ["extension-module"]
