# Copyright 2024 Carnegie Mellon University.
# Released under a MIT (SEI)-style license, please see LICENSE.md in the project 
# root or contact permission@sei.cmu.edu for full terms.

[package]
name = "stuff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.2"
anyhow = "1.0.71"
clap = "4.3.2"
generic-array = "0.14.7"
lazy_static = "1.4.0"
obfstr = "0.4.3"
rand = "0.8.5"
strum = { version = "0.24.1", features = ["derive"] }

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"
