[package]
name = "rechallenge"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = { version = "0.10.3", features = ["std"] }
base64 = "0.22.1"
clap = { version = "4.5.18", features = ["derive"] }
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha2 = "0.10.8"
strum = { version = "0.26.3", features = ["derive"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets", "getrandom"] }

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"
