[package]
name = "the-enemy-within-inner1"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
version_1 = []
version_2 = []
version_3 = []
version_4 = []

[dependencies]
dirs = "2.0.2"
rand = "0.7.3"
zip = "0.5.6"
