[package]
name = "the-enemy-within-exe"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
version_1 = []
version_2 = []
version_3 = []
version_4 = []

[dependencies]
winreg = "0.7.0"
dirs = "2.0.2"
rand = "0.7.3"
