[package]
name = "enc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm-siv = "*"
rand_chacha = "*"
rand = { version = "*", features = ["getrandom"] }

[lib]
name = "enc"
crate-type = ["cdylib"]
