[package]
name = "prescup3-reportingin"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde = { version = "1", features = ["derive"] }
ipnet = { version = "2.3", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"
obfstr = "0.3.0"
lazy_static = "1.4.0"
regex = "1.5"